--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "./node_modules/jshint/bin/jshint di.js test/di.js && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha"
   },
   "author": "Aubin VIGHIER",
   "license": "ISC",
   "devDependencies": {
+    "istanbul": "^0.3.5",
+    "jshint": "^2.6.0",
     "mocha": "^2.1.0"
   }
 }
