Added some informations in package.json

--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
   "name": "simple-dijs",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Di container (pimple like)",
   "main": "di.js",
   "directories": {
     "test": "test"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Devlopnet/dijs.git"
+  },
   "scripts": {
     "test": "./node_modules/jshint/bin/jshint di.js test/di.js && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha"
   },
+  "keywords": [
+    "dependency",
+    "injection",
+    "DI",
+    "dependency injection",
+    "dependency-injection"
+  ],
   "author": "Aubin VIGHIER",
   "license": "ISC",
   "devDependencies": {
