--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "ISC",
   "devDependencies": {
     "istanbul": "^0.3.5",
+    "jsdoc": "^3.4.0",
     "jshint": "^2.6.0",
     "mocha": "^2.1.0"
   }
