--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git://github.com/avighier/simple-dijs.git"
   },
   "scripts": {
-    "test": "./node_modules/jshint/bin/jshint di.js test/di.js && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha"
+    "test": "bash -c 'node_modules/jshint/bin/jshint di.js test/di.js' && bash -c 'node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha' && bash -c 'node_modules/.bin/jsdoc di.js -t node_modules/docdash/ -d api_doc'"
   },
   "keywords": [
     "dependency",
@@ -25,6 +25,7 @@
   "author": "Aubin VIGHIER",
   "license": "ISC",
   "devDependencies": {
+    "docdash": "^0.4.0",
     "istanbul": "^0.3.5",
     "jsdoc": "^3.4.0",
     "jshint": "^2.6.0",
