--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "bugs": {
-    "url" : "https://github.com/avighier/simple-dijs/issues?q=is%3Aopen+is%3Aissue+label%3Abug"
+    "url": "https://github.com/avighier/simple-dijs/issues?q=is%3Aopen+is%3Aissue+label%3Abug"
   },
   "homepage": "https://avighier.github.io/simple-dijs",
   "repository": {
@@ -15,7 +15,7 @@
     "url": "git://github.com/avighier/simple-dijs.git"
   },
   "scripts": {
-    "test": "bash -c 'node_modules/jshint/bin/jshint di.js test/di.js' && bash -c 'node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha' && bash -c 'node_modules/.bin/jsdoc di.js -t node_modules/docdash/ -d api_doc'"
+    "test": "bash -c 'node_modules/jshint/bin/jshint di.js test/di.js' && bash -c 'node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha' && bash -c 'node_modules/.bin/jsdoc di.js -t node_modules/docdash/ -d api_doc' && bash -c 'node_modules/.bin/uglifyjs --compress --mangle toplevel -o di.min.js -- di.js'"
   },
   "keywords": [
     "dependency",
@@ -33,6 +33,7 @@
     "istanbul": "^0.3.5",
     "jsdoc": "^3.4.0",
     "jshint": "^2.6.0",
-    "mocha": "^2.1.0"
+    "mocha": "^2.1.0",
+    "uglify-js": "^2.6.3"
   }
 }
