Use Browserify to produce Browser valid and small test to verify it can be lauched in browser

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "url": "git://github.com/avighier/simple-dijs.git"
   },
   "scripts": {
-    "test": "bash -c 'node_modules/jshint/bin/jshint di.js test/di.js' && bash -c 'node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha' && bash -c 'node_modules/.bin/jsdoc di.js -t node_modules/docdash/ -d api_doc' && bash -c 'node_modules/.bin/uglifyjs --compress --mangle toplevel -o di.min.js -- di.js'"
+    "test": "bash -c 'node_modules/jshint/bin/jshint di.js test/di.js' && bash -c 'node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha'",
+    "browser": "bash -c 'node_modules/.bin/browserify di.js --standalone Di -o browser/di.js' && bash -c 'node_modules/.bin/uglifyjs --compress -o browser/di.min.js -- browser/di.js'",
+    "doc": "bash -c 'node_modules/.bin/jsdoc di.js -t node_modules/docdash/ -d api_doc'",
+    "build": "npm run browser && npm run test && npm run doc"
   },
   "keywords": [
     "dependency",
@@ -29,6 +32,7 @@
   "author": "Aubin VIGHIER",
   "license": "ISC",
   "devDependencies": {
+    "browserify": "^13.0.1",
     "docdash": "^0.4.0",
     "istanbul": "^0.3.5",
     "jsdoc": "^3.4.0",
