--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "bash -c 'node_modules/jshint/bin/jshint di.js test/di.js' && bash -c 'node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha'",
     "browser": "bash -c 'node_modules/.bin/browserify di.js --standalone Di -o browser/di.js' && bash -c 'node_modules/.bin/uglifyjs --compress -o browser/di.min.js -- browser/di.js'",
     "doc": "bash -c 'node_modules/.bin/jsdoc di.js -t node_modules/docdash/ -d api_doc'",
-    "build": "npm run browser && npm run test && npm run doc"
+    "browser-test": "bash -c 'node_modules/.bin/browserify test/di.js --exclude di.js -o test/browser/di.js'",
+    "build": "npm run test && npm run browser && npm run doc"
   },
   "keywords": [
     "dependency",
