--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   },
   "scripts": {
     "test": "bash -c 'node_modules/jshint/bin/jshint di.js test/di.js' && bash -c 'node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha'",
-    "browser": "bash -c 'node_modules/.bin/browserify di.js --standalone Di -o browser/di.js' && bash -c 'node_modules/.bin/uglifyjs --compress -o browser/di.min.js -- browser/di.js'",
+    "browser-build": "bash -c 'node_modules/.bin/browserify di.js --standalone Di -o browser/di.js' && bash -c 'node_modules/.bin/uglifyjs --compress -o browser/di.min.js -- browser/di.js'",
     "doc": "bash -c 'node_modules/.bin/jsdoc di.js -t node_modules/docdash/ -d api_doc'",
-    "browser-test": "bash -c 'node_modules/.bin/browserify test/di.js --exclude di.js -o test/browser/di.js'",
-    "build": "npm run test && npm run browser && npm run doc"
+    "browser-test": "bash -c 'node_modules/.bin/browserify test/di.js --exclude di.js -o test/browser/di.js' && bash -c 'node_modules/.bin/mocha-phantomjs test/browser/browser.html'",
+    "build": "npm run test && npm run browser-build && npm run browser-test && npm run doc"
   },
   "keywords": [
     "dependency",
@@ -39,6 +39,7 @@
     "jsdoc": "^3.4.0",
     "jshint": "^2.6.0",
     "mocha": "^2.1.0",
+    "mocha-phantomjs": "^4.1.0",
     "uglify-js": "^2.6.3"
   }
 }
