--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "Aubin VIGHIER",
   "license": "ISC",
   "devDependencies": {
+    "bower": "^1.7.9",
     "browserify": "^13.0.1",
     "docdash": "^0.4.0",
     "istanbul": "^0.3.5",
