--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "doc": "bash -c 'node_modules/.bin/jsdoc di.js -t node_modules/docdash/ -d doc'",
     "build-dist": "bash -c 'node_modules/.bin/browserify di.js --standalone Di -o dist/di.js'",
     "jshint": "bash -c 'node_modules/jshint/bin/jshint di.js test/di.js'",
-    "build": "npm run build-dist && npm run jshint && npm run test && npm run doc"
+    "build": "npm run build-dist && npm run jshint && npm run test && npm run doc",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "dependency",
