--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "bower": "^1.7.9",
     "browserify": "^13.0.1",
     "docdash": "^0.4.0",
-    "eslint": "^3.0.0",
     "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-standard": "^1.3.2",
     "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.0",
     "istanbul": "^0.3.5",
     "jsdoc": "^3.4.0",
     "jshint": "^2.6.0",
