--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "browser-test": "bash -c 'node_modules/.bin/browserify test/di.js -o test/browser/di.js' && bash -c 'node_modules/.bin/mocha-phantomjs test/browser/browser.html' && rm test/browser/di.js",
     "doc": "bash -c 'node_modules/.bin/jsdoc src/di.js -t node_modules/docdash/ -d doc'",
     "build-dist": "bash -c 'mkdir -p dist' && bash -c 'node_modules/.bin/browserify src/di.js --standalone Di -o dist/di.js'",
-    "jshint": "bash -c 'node_modules/jshint/bin/jshint src/di.js test/di.js'",
+    "jshint": "node_modules/.bin/gulp lint",
     "build": "npm run build-dist && npm run jshint && npm run test",
     "prepublish": "npm run build"
   },
