--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "bower": "^1.7.9",
     "browserify": "^13.0.1",
+    "del": "^2.2.1",
     "docdash": "^0.4.0",
     "eslint-config-standard": "^5.3.1",
     "eslint-plugin-promise": "^1.3.2",
