--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "eslint-plugin-standard": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.0",
+    "gulp-istanbul": "^1.0.0",
+    "gulp-mocha": "^2.2.0",
     "istanbul": "^0.3.5",
     "jsdoc": "^3.4.0",
     "mocha": "^2.1.0",
