--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "gulp-eslint": "^3.0.0",
     "gulp-istanbul": "^1.0.0",
     "gulp-mocha": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.4",
     "istanbul": "^0.3.5",
     "jsdoc": "^3.4.0",
     "mkdirp": "^0.5.1",
