--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     "gulp-eslint": "^3.0.0",
     "gulp-istanbul": "^1.0.0",
     "gulp-mocha": "^2.2.0",
+    "gulp-mocha-phantomjs": "^0.11.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.4",
     "istanbul": "^0.3.5",
     "jsdoc": "^3.4.0",
     "mkdirp": "^0.5.1",
     "mocha": "^2.1.0",
-    "mocha-phantomjs": "^4.1.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
