--- a/package.json
+++ b/package.json
@@ -15,13 +15,8 @@
     "url": "git://github.com/avighier/simple-dijs.git"
   },
   "scripts": {
-    "test": "node_modules/.bin/gulp test",
-    "browser-test": "bash -c 'node_modules/.bin/browserify test/di.js -o test/browser/di.js' && bash -c 'node_modules/.bin/mocha-phantomjs test/browser/browser.html' && rm test/browser/di.js",
-    "doc": "bash -c 'node_modules/.bin/jsdoc src/di.js -t node_modules/docdash/ -d doc'",
-    "build-dist": "node_modules/.bin/gulp build-dist",
-    "jshint": "node_modules/.bin/gulp lint",
-    "build": "npm run build-dist && npm run jshint && npm run test",
-    "prepublish": "npm run build"
+    "test": "node_modules/.bin/gulp build",
+    "prepublish": "node_modules/.bin/gulp build"
   },
   "keywords": [
     "dependency",
