--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsdoc": "^3.4.0",
     "mkdirp": "^0.5.1",
     "mocha": "^2.1.0",
+    "npm-test-install": "^0.1.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
