--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-mocha": "^2.2.0",
     "gulp-mocha-phantomjs": "^0.11.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-uglify": "^1.5.4",
     "istanbul": "^0.3.5",
     "jsdoc": "^3.4.0",
