--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.0",
     "gulp-istanbul": "^1.0.0",
+    "gulp-jsinspect": "^2.0.0",
     "gulp-mocha": "^2.2.0",
     "gulp-mocha-phantomjs": "^0.11.0",
     "gulp-rename": "^1.2.2",
