--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "istanbul": "^0.3.5",
     "mkdirp": "^0.5.1",
     "mocha": "^2.1.0",
+    "npm-check": "^5.2.3",
     "npm-test-install": "^0.4.0",
     "vinyl-source-stream": "^1.1.0"
   }
