--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-uglify": "^1.5.4",
     "istanbul": "^0.3.5",
+    "jsdoc-to-markdown": "^1.3.7",
     "mkdirp": "^0.5.1",
     "mocha": "^2.1.0",
     "npm-check": "^5.2.3",
