--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "directories": {
     "test": "test"
   },
-  "bugs": {
-    "url": "https://github.com/avighier/simple-dijs/issues?q=is%3Aopen+is%3Aissue+label%3Abug"
+  "engines": {
+      "node": ">=0.12"
   },
-  "homepage": "https://avighier.github.io/simple-dijs",
+  "bugs": {
+    "url": "https://github.com/avighier/simple-dijs/issues"
+  },
+  "homepage": "https://github.com/avighier/simple-dijs",
   "repository": {
     "type": "git",
     "url": "git://github.com/avighier/simple-dijs.git"
