--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "engines": {
-      "node": ">=0.12"
+    "node": ">=0.12"
   },
   "bugs": {
     "url": "https://github.com/avighier/simple-dijs/issues"
@@ -34,6 +34,7 @@
     "eslint-config-standard": "^5.3.1",
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-standard": "^1.3.2",
+    "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.0",
     "gulp-istanbul": "^1.0.0",
@@ -48,7 +49,7 @@
     "mkdirp": "^0.5.1",
     "mocha": "^2.1.0",
     "npm-check": "^5.2.3",
-    "npm-test-install": "^0.4.0",
+    "tmp": "0.0.29",
     "vinyl-source-stream": "^1.1.0"
   }
 }
