--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
 install:
     - nvm install 0.12
     - nvm install 4.5
-    - nvm install node
+    - nvm install lts/*
     - npm install
 script: node_modules/.bin/gulp build
